# F.R.I.D.A.Y

./: .gitignore  CHANGELOG.md  CLI.md  CLI_GUIDE.md  COMMANDS.md  CONTINUOUS_LEARNING.md  FEATURES.md  QUICKSTART.md  README.md  REDDIT_TRAINING.md  RUN_THIS_FOR_GPU.md  TRAINING_QUICKSTART.md  UV_SETUP.md  cli.py  install_gpu.bat  install_gpu.sh  main.py  pyproject.toml  requirements.txt  run_api.py  train.py
data/: conversation_knowledge.py  qa_knowledge_base.py  reasoning_instructions.py  text_format_knowledge.py
docs/: AI_LANGUAGE_MODEL.md  API_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_SIMPLE_EN.md  AUTH_MIDDLEWARE_DOCUMENTATION.md  CUSTOM_NEURON_TYPES.md  DATASET_TRAINING.md  EMBEDDING_EXPLAINED_EN.md  ERROR_HANDLING_DOCUMENTATION.md  ERROR_HANDLING_SUMMARY.md  HOW_FRIDAY_WORKS_EN.md  MAIN_ENTRY_POINT.md  MEMORY_NEURON_SUMMARY.md  README.md  SDK_IMPLEMENTATION_SUMMARY.md  VISUALIZATION_SUMMARY.md
docs/api/: README.md
docs/implementation/: LIFECYCLE_MANAGEMENT_IMPLEMENTATION.md  QUERY_ENGINE_IMPLEMENTATION.md  STORAGE_IMPLEMENTATION.md  TOOL_CLUSTER_IMPLEMENTATION.md  TOOL_NEURON_IMPLEMENTATION.md  TRAINING_ENGINE_IMPLEMENTATION.md  VISUALIZATION_IMPLEMENTATION.md
examples/: example_dataset_training.py  example_error_handling_usage.py  example_gpu_training.py  example_lifecycle_usage.py  example_load_trained_ai.py  example_main_usage.py  example_memory_neuron_usage.py  example_pretrained_ai.py  example_sdk_usage.py  example_storage_usage.py  example_tool_cluster_usage.py  example_tool_neuron_usage.py  example_tools.py  example_visualization_usage.py  neural_inference_demo.py
neuron_system/: README.md  __init__.py
neuron_system/ai/: __init__.py  additional_knowledge.py  chain_of_thought.py  dataset_loader.py  (+23 more)
scripts/: README.md  analyze_synapses.py  benchmark_gpu.py  check_db.py  demo_hebbian.py  extract_knowledge.py  fix_neuron_positions.py  live_viewer.py  migrate_to_higher_dimensions.py  reset_brain.py  reset_connections.py  setup_model.py  setup_neural_inference.py  test_dynamic_dimensions.py  validate_3d_system.py  validate_clustering.py  validate_dynamic_dimensions.py  view_brain_optimized.py
tests/: README.md  check_db.py  check_memory_in_db.py  count_conversations.py  count_reasoning.py  debug_vectors.py  migrate_add_importance.py  test_aggressive_training.py  test_ai.py  test_ai_quick.py  test_ai_responses.py  test_api.py  test_auth_middleware.py  test_basic_functionality.py  test_complex_question.py  test_continuous_improvement.py  test_conversation.py  test_conversation_detailed.py  test_core.py  test_error_handling.py  test_gpu_acceleration.py  test_improved_ai.py  test_improved_evaluation.py  test_language_query.py  test_letter_counting.py  test_lifecycle_management.py  test_main_entry_point.py  test_memory_chat.py  test_memory_persistence.py  test_model_loading.py  test_problem_questions.py  test_query_detailed.py  test_query_engine.py  test_real_improvement.py  test_reasoning.py  test_save.py  test_sdk.py  test_self_reflection.py  test_self_training.py  test_smart_training.py  (+14 more)
(+73 files in other folders)
