[project]
name = "friday-ai"
version = "2.3.0"
description = "F.R.I.D.A.Y - AI Assistant with 3D Synaptic Neuron System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "F.R.I.D.A.Y Team"}
]
keywords = ["ai", "neural-network", "3d-visualization", "machine-learning", "neuron-system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core dependencies
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    
    # Neural Inference Engine
    "transformers>=4.30.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    
    # Dataset loading
    "datasets>=2.14.0",
    
    # PyTorch (CPU version by default, see extras for CUDA)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    
    # Web Interface
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    
    # HuggingFace Integration
    "huggingface-hub>=0.19.0",
    
    # CLI Enhancement
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

viz = [
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
]

all = [
    "friday-ai[dev,viz]",
]

[project.urls]
Homepage = "https://github.com/yourusername/F.R.I.D.A.Y"
Documentation = "https://github.com/yourusername/F.R.I.D.A.Y/blob/main/README.md"
Repository = "https://github.com/yourusername/F.R.I.D.A.Y"
Issues = "https://github.com/yourusername/F.R.I.D.A.Y/issues"

[project.scripts]
friday = "cli:main"
friday-train = "train:main"
friday-view = "neuron_system.visualization.threejs_viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neuron_system"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.uv.sources]
# Use PyTorch with CUDA 12.1 support
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
